Fix for ugly scrollbars in the measuring view.

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -4,6 +4,7 @@ body {
   font-size: small;
   line-height: 1.4;
   margin: 0;
+  overflow: hidden;
 }
 
 a {
